# PORRGA-hardware

./: README.md
arm/: 1M1B.SLDPRT  1M2A.SLDPRT  1M3.SLDASM  1M3A.SLDPRT  2.SLDASM  2M1 assembly.SLDASM  2M1D.SLDPRT  2M2 assembly.SLDASM  2M2.SLDASM  2M2HA.SLDPRT  2M2M assembly.SLDASM  2M2MA.SLDPRT  3M1.SLDASM  3M1D.SLDPRT  3M2C.SLDPRT  3M2CC.SLDPRT  4M.SLDASM  4M1D.SLDPRT  4M2.SLDASM  4M2B.SLDPRT  4M2CB.SLDPRT  5M.SLDASM  8mm Bearing.SLDPRT  Arandela.SLDPRT  Arm-Base-Cover.SLDPRT  Arm-Base.SLDPRT  Barra llisa 8mm x 80mm.SLDPRT  Base assembly.SLDASM  Base fusta.SLDPRT  Bearing 3Bore 10Ext 4Height.SLDPRT  Bearing 4Bore 13Ext 5.SLDPRT  Bearing 5mm.SLDPRT  Bottom Plate C.SLDPRT  Box Assembly B.SLDASM  Box C.SLDPRT  Brass insert M3.SLDPRT  Brass insert M4.SLDPRT  Capacitor 1.SLDPRT  Capacitor 2.SLDPRT  Chip.SLDPRT  (+70 more)
examples/example 1/: Example Hand-Sphere Assem.SLDASM  Example Sphere.SLDPRT
hand/: Hand-Assem-By-Assem.SLDASM  Hand-Assem-By-Part.SLDASM
setting/: Base.SLDPRT  Camera Stand.SLDPRT
urdf/Hand-Assem-URDF-2/: CMakeLists.txt  package.xml
urdf/Hand-Assem-URDF-2/config/: joint_names_Hand-Assem-By-Part-URDF.SLDASM.yaml
urdf/Hand-Assem-URDF-2/launch/: display.launch  gazebo.launch
urdf/Hand-Assem-URDF-2/meshes/: ff-s1.STL  ff-s2.STL  ff-s3.STL  ff.STL  mf-s1.STL  mf-s2.STL  mf-s3.STL  mf.STL  palm.STL  pf-s1.STL  pf-s2.STL  pf-s3.STL  pf.STL  rf-pf.STL  rf-s1.STL  rf-s2.STL  rf-s3.STL  rf.STL  t-s1.STL  t-s2.STL  t.STL  thumb.STL
urdf/Hand-Assem-URDF-2/urdf/: Hand-Assem-By-Part-URDF.SLDASM.csv  Hand-Assem-By-Part-URDF.SLDASM.urdf
(+33 files in other folders)
